--- a/manifests/extension.yaml
+++ b/manifests/extension.yaml
@@ -10,4 +10,4 @@ metadata:
 spec:
   sources:
     - web:
-        url: https://raw.githubusercontent.com/speedfl/argocd-apps-of-applicationset/master/ui/dist/extension.tar
+        url: https://github.com/niteshlaller89/argocd-flow/blob/main/ui/dist/extension.tar
